dipole-20100831
+ Option DIPOLE now calculates the exactly same induced dipole moments and
  fields within the self-consistent iteration as IMD

dipole-20100830
+ Option DIPOLE now calculates the exactly same forces, energies and stresses
  as IMD

dipole-20100825
+ Option COULOMB now calculates the exactly same forces, energies and stresses
  as IMD

dipole-20100817
+ last alignments with IMD

dipole-20100816
+ Option MONOPOLE renamed as COULOMB (adapted to IMD)
+ charge neutrality now provided

trunk-20100920
+ adjust evo abortion criterion
+ fix force2imd script, is now consistent with potfit config numbering
+ [APOT] adjust ccb potential function to include all parameters
+ the version info is now more precise
+ [vasp2force] remove warning about single atom energy if -e is not given

--> POTFIT-20100812 released

trunk-20100812
+ make endpot optional, is set to ${startpot}_end it not given
+ change i386 profile to i586
+ remove a few commented lines that are not necessary any more
+ set reasonable inital values for starting parameters
+ [APOT] add cbb potential to potfit and makeapot
+ add flagfile interruption to evo and remove unneeded variables
+ remove unneeded header files as well
+ adjust diff_evo parameters

trunk-20100810
+ strip even more (comments)

dipole-20100809
+ split option DIPOLE in MONOPOLE and DIPOLE, thereby MONOPOLE is implied by DIPOLE
+ uf (use forces) can now be used in connection with electrostatic forces
+ option FWEIGHT now works with options MONOPOLE and DIPOLE
+ all tail-functions are now evaluated without splines in order to have
  accurate derivations

devel-20100809
+ final commit before next release
+ evolutionary algorithm now restarts if average==best
+ fix Makefile for gcc profiles

dipole-20100804
+ Self energy terms added
+ all splines for electrostatic tail-functions are now evaluated once only
+ shifts changed from (r-r_cut) to 1/2*(r^2 - r_cut^2) (adapted to IMD)
+ output-file Dipol_Konvergenz_Verlauf is now available
