@@ -320,6 +320,10 @@ int main(int argc, char **argv)
       write_pot_table_imd(&calc_pot, imdpot);
     if (plot)
       write_plotpot_pair(&calc_pot, plotfile);
+#ifdef COULOMB
+    apot_table_t *apt = &apot_table;
+    write_coulomb_table();
+#endif
 
 #ifdef PDIST
 #ifndef MPI			/* will not work with MPI */
